ajustando detalhes do projeto

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         </div>
         <div class="row" id="descricao_locacao">
             <p>Oferecemos a mais completa estrutura para você, dentista, que gostaria de atender seus pacientes em um
-                local devidamente equipado e bem localizado. Consulte nossas salas e planos disponíveis (através do link
-                abaixo), para que possamos entender melhor a sua necessidade e lhe oferecer aquilo que mais precisas.
+                local devidamente equipado e bem localizado. Consulte nossas salas e planos disponíveis através do link
+                abaixo, para que possamos entender melhor a sua necessidade e lhe oferecer aquilo que mais precisas.
             </p>
         </div>
         <a id="interesse_locacao" href="https://wa.me/5551993537279?text=Estou%20interessado%20em%20locar%20uma%20sala%20que%20contenha:" target="_blank" rel = "noopener" class="btn btn-light" role="button">Estou interessado!</a>
@@ -191,7 +191,7 @@
                         <h3>Agende seu horário conosco:</h3>
                         <p>+55 51 3517-9850 | +55 51 99259-4708</p>
                         <h3>Endereço:</h3>
-                        <p>Rua Doutor Florêncio Ygartua, 288 salas 508 e 901 -<br> Bairro: Moinhos de Vento, Porto
+                        <p>Rua Doutor Florêncio Ygartua, nº 288 | salas 508 e 901 <br> Bairro: Moinhos de Vento, Porto
                             Alegre/RS
                         </p>
                     </div>
